<resources>
    <string name="app_name">WhatsApp Status Saver</string>
    <string name="tab_text_1">Images</string>
    <string name="tab_text_2">Videos</string>
    <string name="tab_text_3">Downloads</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="whatsapp_header">WhatsApp Version(Requires Restart)</string>
    <string name="ui_mode">Ui Mode(Requires Restart)</string>
    <string name="security">Security</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="whatsapp_version">WhatsApp Version</string>
    <string name="ui_mode_title">Ui Mode</string>
    <string name="security_title">Enable App Lock</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>